--- a/src/view/users/add.html
+++ b/src/view/users/add.html
@@ -1,6 +1,6 @@
 {% extends "universe.html" %}
 {% block body %}
-<form>
+<form method="post">
 Username: <input name="username" type="text"/>
 <select>
 {% for domain in domains %}
