--- a/src/view/users/add.html
+++ b/src/view/users/add.html
@@ -1,5 +1,5 @@
 {% extends "universe.html" %}
-{% block body %}
+{% block content %}
 <form method="post">
 Username: <input name="username" type="text"/>
 <select name="domainid">
