--- a/src/view/domains/add.html
+++ b/src/view/domains/add.html
@@ -1,5 +1,5 @@
 {% extends "universe.html" %}
-{% block body %}
+{% block content %}
 <form method="post">
 Domain: <input name="domain_name" type="text"/>
 <br/>
