Groups menu position comment out

--- a/src/view/menu.html
+++ b/src/view/menu.html
@@ -1,7 +1,7 @@
-<ul>
-<li><a href="{% url controller="domains" action="list"%}">domains</a></li>
-<li><a href="{% url controller="users" action="list"%}">Users</a></li>
-{% comment %}
-<li><a href="{% url controller="groups" action="list"%}">Groups</a></li>
-{% endcomment %}
+<ul id="mail_menu">
+    <li><a href="{% url controller="domains" action="list"%}">domains</a></li>
+    <li><a href="{% url controller="users" action="list"%}">Users</a></li>
+    {% comment %}
+    <li><a href="{% url controller="groups" action="list"%}">Groups</a></li>
+    {% endcomment %}
 </ul>
